--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.1.5"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "nodemon": "^2.0.15"
   }
 }
