--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
@@ -25,7 +26,7 @@
     "mongoose": "^6.1.5"
   },
   "devDependencies": {
-    "prettier": "^2.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
