--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ PASSWORD=DarthMaul23
 DB=Library
 JWT_SECRET=My_secret_string
 JWT_EXPIRE_DURATION=24 hrs
+IMG_UPLOAD_KEY=ae156ca4081c61fb6408d52e1274bf6c
