--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,14 @@
     "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
+    "got": "11.8.1",
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "metascraper": "^5.25.8",
+    "metascraper-description": "^5.25.8",
+    "metascraper-image": "^5.25.8",
+    "metascraper-title": "^5.25.8",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.5"
   },
